# flask-api-with-clearn-architecture

./: .gitignore  README.md  pyproject.toml  up.sh
app/: __init__.py  config.py
app/core/: exceptions.py
app/core/domain/: User.py  board.py  user.py
app/core/dto/: auth.py  board.py  join.py
app/core/enum/: __init__.py
app/core/schemas/: __init__.py  board.py  login.py  user.py
app/core/use_case_outputs/: __init__.py
app/core/use_cases/: base.py  create_board.py  delete_board.py
app/core/use_cases/v1/auth/: login.py
app/core/use_cases/v1/board/: create_board.py  delete_board.py  edit_board.py  get_board.py  get_board_list.py
app/core/use_cases/v1/join/: create_user.py
app/core/usecases/: create_board.py
app/data/sqla_models/: models.py
app/extensions/: database.py
app/extensions/provider/: __init__.py
app/extensions/utils/cursor/: cursor.py
app/http/api/: __init__.py
app/http/api/v1/: auth.py  board.py  join.py
app/http/requests/: __init__.py
app/http/requests/board/: create_board.py
app/http/requests/v1/: auth.py  board.py  join.py
app/http/response/presenters/: auth.py  board.py  join.py
app/repositories/: __init__.py
app/repositories/orm/: orm_repository.py
tests/: test_ted_flask_study.py
tests/app/http/api/v1/: board.py  test_board.py
