[tool.poetry]
name = "ted-flask-study"
version = "0.1.0"
description = ""
authors = ["ted <ted@cupist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
mysql-connector-python = "^8.0.22"
voluptuous = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
