[tool.poetry]
name = "ted-flask-study"
version = "0.1.0"
description = ""
authors = ["ted <ted@cupist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
mysql-connector-python = "^8.0.22"
voluptuous = "^0.12.0"
Inject = "^4.3.1"
pytest-flask = "^1.1.0"
pytest = "^6.1.2"
marshmallow = "^3.10.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.1"
Flask-Bcrypt = "^0.7.1"
Flask-JWT-Extended = "^3.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
